fix spacing issue with hidden logo

--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -21,12 +21,13 @@ a {
 }
 
 #nav-bar{
+  margin: 0;
   position: relative;
   top: 0;
   height: 70px;
   width: 100%;
   background-color: #ecf0f1;
-  opacity: 0.7;
+  opacity: 0.9;
 }
 
 nav ul {
@@ -55,6 +56,7 @@ nav a {
 
 li.logo {
   max-width:0;
+  height: 70px;
   overflow: hidden;
   background: white;
   transition: all 0.5s;
